# wattpad.py

./: README.md  pyproject.toml
wattpad/: __init__.py  enums.py  http.py  types_.py  types_msgspec_.py  utils.py
